# episcaf

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
archive/: README.md
configs/: paths.py
data/: README.md
docs/: CASE_ENCODING.md  CYLINDER_PARAMS.md  DP4_LIBRARY.md  MIGRATION.md  PIPELINE.md  README_v2_original.md  REORG.md  WORKFLOW.md
dp4_8vdl/: .gitignore  README.md
episcaf_analysis/: __init__.py  build_12mer_metrics.py  composite_swap_validate.py  compute_metrics.py  cylinder_surrogate_auc.py  dual_island_targets.py  false_positive_check.py  native_cylinder_core.py  presets.py  score.py
episcaf_pipeline/: __main__.py  build_dp4_tiled30mers.py  build_dp4_tiled30mers_fasta.py  build_dual_island_designs.py  build_whole_epitope_designs.py  cli.py  paths.py  pdb_fasta.py  schema.py  tile_fasta.py  utils.py
legacy_steps/: 05_rmsd_vs_af3.py  README.md
manuscript/: README.md  main.tex  refs.bib
notebooks/: dp3_vs_12mer_distributions.ipynb
results/: README.md  antigen_seq_vs_fasta.csv  assayed_cylinder_worklist.csv  assayed_native_cyl.csv  assayed_native_cyl_ed1.5.csv  cylinder_carve_sweep.csv  cylinder_param_sweep.csv  dp3_binding_metrics.csv  dp4_8vdl_top10.csv  dp4_8vdl_top10_allmetrics.csv  dp4_8vdl_top29.csv  dp4_C1_scaffoldEPITOPE.csv  dp4_C1_scaffoldEPITOPE.top15.csv  dp4_C1_whole_epitope_ranked.top20.csv  dp4_C1_whole_epitope_ranked.top20.top20.csv  dp4_C2_scaffoldEPITOPE.csv  dp4_C2_single_island_ranked.top20.csv  dp4_C3_12mer_ranked.top20.csv  dp4_C3_scaffoldEPITOPE.csv  dp4_C5_scaffoldEPITOPE.csv  dp4_C5_titration.csv  (+5 more)
(+249 files in other folders)
